# biorite

./: .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  flake.nix  rustfmt.toml
.cargo/: config.toml
assets/shaders/: array_texture.wgsl  fragment.wgsl  vertex.wgsl
biorite_api/: Cargo.toml
biorite_api/src/: main.rs
biorite_client/: Cargo.toml
biorite_client/src/: auth.rs  camera.rs  config.rs  main.rs  material.rs  menu.rs  mesh.rs  raycast.rs  render.rs  state.rs
biorite_client/src/net/: init.rs  mod.rs  player_input.rs  request.rs  spawn.rs  sync.rs  util.rs
biorite_generator/: Cargo.toml
biorite_generator/src/: blocks.rs  chunk.rs  generator.rs  lib.rs  save.rs
biorite_server/: Cargo.toml
biorite_server/src/: auth.rs  block_update.rs  chunks.rs  collider.rs  config.rs  main.rs
biorite_server/src/net/: events.rs  init.rs  mod.rs  sync.rs  util.rs
biorite_shared/: Cargo.toml
biorite_shared/src/: auth.rs  consts.rs  lib.rs  mod.rs  player.rs
biorite_shared/src/net/: data_types.rs  mod.rs  protocol.rs
docs/: CODE_OF_CONDUCT.md  COPYRIGHT.md  CREDITS.md  WHITEPAPER.md
src/: lib.rs  prelude.rs
src/audio/: mod.rs
src/chunks/: block_update.rs  blocks.rs  chunk_updater.rs  collider.rs  generator.rs  mod.rs  pos.rs  request.rs  sender.rs  server.rs
src/debugging/: mod.rs  ui.rs  wireframe.rs
src/networking/: client.rs  config.rs  messages.rs  mod.rs  server.rs
src/networking/client/: mod.rs
src/networking/messages/: client.rs  mod.rs  server.rs
src/networking/server/: mod.rs
src/player/: mod.rs
src/render/: camera.rs  material.rs  mesh.rs  mod.rs  plugin.rs  raycast.rs  render_queue.rs
src/ui/: mod.rs
