[package]
name = "bazerite"
version = "0.1.0"
edition = "2021"
default-run = "bazerite"

[[bin]]
name = "bazerite"
path = "src/bin/client.rs"

[[bin]]
name = "bazerite-server"
path = "src/bin/server.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9.1", features = [ "wayland", "dynamic"]}

serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"

block-mesh = "0.2.0"

bevy_renet = "0.0.6"
bevy_spectator = "0.1.1"
bevy_atmosphere = "0.5.0"
bevy-inspector-egui = "0.15.0"

rand = "0.8.5"
zstd_util = "0.1.2"
jordan4ibanez_perlin_rust = "0.0.1"
# simple-simplex = "1.0.3"
bincode = "1.3.1"

local-ip-address = "0.4.8"

# # For port forwarded servers
# public-ip = "0.2.2"
# tokio = { version = "1", features = ["full"] }

