[package]
name = "biorite"
version = "0.1.0"
edition = "2021"
authors = ["sioodmy hello@sioodmy.dev"]
repository = "https://git.sioodmy.dev/sioodmy/biorite"
license = "GPL-3.0-only"
categories = ["games"]
default-run = "biorite"

[[bin]]
name = "biorite"
path = "src/bin/client.rs"

[[bin]]
name = "biorite-server"
path = "src/bin/server.rs"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
# Game engine
bevy = {version = "0.9.1", features = [ "wayland", "dynamic"]}
block-mesh = { git="https://github.com/bonsairobo/block-mesh-rs", rev="793c53e82c12b3f7e9502006664c6e81f8b1c78a"}
bevy_spectator = "0.1.1"
bevy_atmosphere = "0.5.0"
bevy_easings = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy_asset_loader = "0.14.1"
bevy_egui = "0.18.0"
colorgrad = "0.6.2"
smooth-bevy-cameras = "0.6.0"
futures-lite = "1.12.0"
bevy_mod_raycast = "0.7.0"
kayak_ui = { git = "https://github.com/StarArawn/kayak_ui", rev="910a00cdd3857cc7515f153580afd057de0abaf0"}
bevy_rapier3d = "0.19.0"
rayon = "1.6.1"
crossbeam-channel = "0.5.6"

# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.6"
lz4 = "1.21.0"
public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

# World generation
rand = "0.8.5"
bracket-noise = "0.8.7"
jordan4ibanez_perlin_rust = "0.0.1"
simple-simplex = "1.0.3"
interpolation = "0.2.0"

lazy_static = "1.4.0"
