[package]
name = "biorite"
version = "0.0.11"
edition = "2021"
authors = ["sioodmy hello@sioodmy.dev"]
repository = "https://git.sioodmy.dev/sioodmy/biorite"
license = "GPL-3.0-only"
categories = ["games"]
default-run = "biorite"

[[bin]]
name = "biorite"
path = "src/bin/client.rs"

[[bin]]
name = "biorite-server"
path = "src/bin/server.rs"

[profile.release]
codegen-units = 1
lto = true

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.block-mesh]
overflow-checks = false

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
  "bevy_winit", 
  "render", 
  "png", 
  "x11",
  "wayland",
  "bevy_pbr",
  "bevy_ui",
  "serialize",
  "bevy_core_pipeline",
]

[dependencies.bevy_kira_audio]
version = "0.13.0"
# `ogg` format support is enabled by default, disable if you don't want it
default-features = false
# enable the features you care about
features = [
  "wav",
  "flac",
  "mp3",
  "ogg",
]

[features]
# default = ["fast-compile"]
fast-compile = ["bevy/dynamic"]

[dependencies]
jemallocator = "0.3.2"
block-mesh = { git="https://github.com/Shirakawa42/block-mesh-rs", rev="6219f1b4f58cf6cafad7c1f999519847f80f0c1c"}
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_atmosphere = "0.5.0"
bevy_easings = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy_embedded_assets = "0.6.2"
bevy_asset_loader = "0.14.1"
bevy_egui = "0.18.0"
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_mod_raycast = "0.7.0"
belly = { git ="https://github.com/jkb0o/belly", rev="61b9aaed9a83cdcf99ccac2c79bb680a97cfd653"}
bevy_rapier3d = { version = "0.19.0", features = [ "parallel", "simd-nightly"] }
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.6"
lz4_flex = { version = "0.9.3" }

public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

# World generation
rand = "0.8.5"
splines = "4.1.1"
bracket-noise = "0.8.7"
lazy_static = "1.4.0"
