[package]
name = "biorite_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fast" ]
fast = ["bevy/dynamic"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"

[dependencies.bevy]
version = "0.9.1"
default-features = false
features = [
  "bevy_winit", 
  "render", 
  "png", 
  "x11",
  "wayland",
  "bevy_pbr",
  "bevy_ui",
  "serialize",
  "bevy_core_pipeline",
]

[dependencies.bevy_kira_audio]
version = "0.13.0"
default-features = false
features = [ "wav" ]

[dependencies]
block-mesh = { git = "https://github.com/hankjordan/block-mesh-rs", rev = "975a11b55405faa80ec2aa339b8d61e180e6338c"}
biorite_shared = { path = "../biorite_shared" }
biorite_generator = { path = "../biorite_generator"}
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_atmosphere = "0.5.0"
bevy_easings = "0.9.1"
bevy-inspector-egui = "0.15.0"
bevy_embedded_assets = "0.6.2"
bevy_asset_loader = "0.14.1"
bevy_egui = "0.18.0"
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_mod_raycast = "0.7.0"
bevy_rapier3d = { version = "0.19.0", features = [ "parallel", "simd-nightly"] }
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.6"
lz4_flex = { version = "0.9.3" }

public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

# World generation
rand = "0.8.5"
splines = "4.1.1"
bracket-noise = "0.8.7"
lazy_static = "1.4.0"


