[package]
name = "biorite_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fast" ]
fast = ["bevy/dynamic_linking"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"

[dependencies.bevy]
version = "0.10.0"
default-features = true
features = [
  "wayland",
]

[dependencies.bevy_kira_audio]
version = "0.13.0"
default-features = false
features = [ "wav" ]

[dependencies]
block-mesh = { git = "https://github.com/hankjordan/block-mesh-rs", rev = "975a11b55405faa80ec2aa339b8d61e180e6338c"}
biorite_shared = { path = "../biorite_shared" }
biorite_generator = { path = "../biorite_generator"}
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_atmosphere = { git = "https://github.com/BrandonDyer64/bevy_atmosphere", rev = "904718410bdac78ad8089f7f12baa9d303affac2"}
bevy_easings = "0.10.0"
aes-gcm = "0.10.1"
bevy-inspector-egui = "0.15.0"
bevy_embedded_assets = "0.7.0"
bevy_asset_loader = "0.14.1"
base64 = "0.21.0"
lazy_static = "1.4.0"
anyhow = "1.0.69"
clap = { version = "4.1.6", features = [ "derive" ] }
bevy_egui = "0.18.0"
env_logger = "0.10.0"
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_mod_raycast = { git = "https://github.com/soerenmeier/bevy_mod_raycast", rev = "ebec4facf385ff789080e32b7fd1f2ea99a6a986"}
bevy_rapier3d = { version = "0.21.0", features = [ "parallel", "simd-nightly"] }

rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.7"
lz4_flex = { version = "0.9.3" }

public-ip = "0.2.2"
serde_json = "1.0.93"
seed15 = "0.1.5"
ed25519-dalek = { version = "1.0.1", features = [ "serde" ] }
uuid = { version = "1.3.0", features = ["fast-rng"] }
reqwest = { version = "0.11.11", features = [ "blocking", "json" ] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

# World generation
rand = "0.8.5"
splines = "4.1.1"
bracket-noise = "0.8.7"


