[package]
name = "biorite_generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
fast = ["bevy/dynamic"]

[dependencies]
bevy = { version = "0.9.1", default-features = false }
rand = "0.8.5"
splines = "4.1.1"
bracket-noise = "0.8.7"
lazy_static = "1.4.0"
rayon = "1.6.1"
serde = { version = "1.0", features = [ "derive" ] } 
block-mesh = { git="https://github.com/hankjordan/block-mesh-rs/", rev="975a11b55405faa80ec2aa339b8d61e180e6338c"}
serde-big-array = "0.4.1"
bincode = "1.3.1"
lz4_flex = { version = "0.9.3" }
scc = "1.1.0"
crossbeam-channel = "0.5.6"
bevy_rapier3d = { version = "0.19.0", features = [ "parallel", "simd-nightly"] }
