[package]
name = "biorite_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fast" ]
fast = ["bevy/dynamic"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"

[dependencies.bevy]
version = "0.9.1"
default-features = true
features = [
  "bevy_winit", 
  "render", 
  "png", 
  "x11",
  "wayland",
  "bevy_pbr",
  "bevy_ui",
  "serialize",
  "bevy_core_pipeline",
]

[dependencies]
biorite_generator = { path = "../biorite_generator"}
biorite_shared = { path = "../biorite_shared"}
block-mesh = { git = "https://github.com/hankjordan/block-mesh-rs", rev = "975a11b55405faa80ec2aa339b8d61e180e6338c"}
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_rapier3d = { version = "0.19.0", features = [ "parallel", "simd-nightly"] }
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.6"

public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

lz4_flex = { version = "0.9.3" }
