[package]
name = "biorite_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = [ "fast" ]
fast = ["bevy/dynamic"]

[target.'cfg(not(target_os = "windows"))'.dependencies]
jemallocator = "0.3.2"

[dependencies.bevy]
# TODO
version = "0.9.1"
default-features = true

[dependencies]
biorite_generator = { path = "../biorite_generator"}
biorite_shared = { path = "../biorite_shared"}
block-mesh = { git = "https://github.com/hankjordan/block-mesh-rs", rev = "975a11b55405faa80ec2aa339b8d61e180e6338c"}
actix-rt = "2.8.0"
futures = "0.3.26"
lazy_static = "1.4.0"
base64 = "0.21.0"
clap = { version = "4.1.6", features = [ "derive" ] }
fallible-iterator = "0.2.0"
rand = "0.8.5"
env_logger = "0.10.0"
actix-web = "4.3.0"
uuid = { version = "1.3.0", features = ["fast-rng"] }
ed25519-dalek = { version = "1.0.1", features = [ "serde" ] }
serde_json = "1.0.93"
rusqlite = "0.28.0"
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_rapier3d = { version = "0.19.0", features = [ "parallel", "simd-nightly"] }
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.6"

public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

lz4_flex = { version = "0.9.3" }
