[package]
name = "biorite_shared"
version = "0.1.0"
edition = "2021"

[features]
default = [ "fast" ]
fast = ["bevy/dynamic_linking"]

[dependencies.bevy]
version = "0.10.0"
default-features = true

[dependencies]
biorite_generator = { path = "../biorite_generator" }
bevy_flycam = { git = "https://github.com/sburris0/bevy_flycam" }
bevy_atmosphere = "0.5.0"
bevy_easings = "0.9.1"
bevy_embedded_assets = "0.6.2"
bevy_asset_loader = "0.14.1"
bevy_egui = "0.18.0"
scc = "1.1.0"
futures-lite = "1.12.0"
bevy_mod_raycast = "0.7.0"
bevy_rapier3d = { version = "0.21.0", features = [ "parallel", "simd-nightly"] }
rayon = "1.6.1"
crossbeam-channel = "0.5.6"
# Network stuff
serde = { version = "1.0", features = [ "derive" ] } 
serde-big-array = "0.4.1"
bevy_renet = "0.0.7"
lz4_flex = { version = "0.9.3" }
seed15 = "0.1.5"

public-ip = "0.2.2"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.4.8"
bincode = "1.3.1"

# World generation
rand = "0.8.5"
splines = "4.1.1"
bracket-noise = "0.8.7"
lazy_static = "1.4.0"

